2004-06-15  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Added --enable-profile option and removed
	--enable-gprof. --enable-profile enables gprof and gcov.

	* gmime/gmime-parser.c: #include <stdlib.h> for strtoul()
	(parser_construct_leaf_part): Got rid of an unused variable.

	* gmime/gmime-param.c (rfc2184_param_new): Got rid of an unused
	variable.
	(rfc2184_decode): Got rid of an unused variable.

	* util/gtrie.c (trie_utf8_getc): Get rid of the unused labels.

2004-06-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-filter.c (stream_write): Set flushed to
	FALSE.
	(stream_read): Set flushed to FALSE if we end up filtering more
	data.

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Record the
	nodata state.
	(gpg_verify): Check the nodata state.

2004-06-06  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Updated.

	* configure.in: Bumped version to 2.1.6

	* gmime/gmime-parser.c (parser_construct_multipart): Instead of
	using g_mime_object_set_content_type(), destroy the current
	content_type object and set our own on it directly. This prevents
	the raw Content-Type header value from being overridden by the
	re-written version from our parsed object.
	(parser_construct_leaf_part): Same.

	* gmime/gmime-part.c (mime_part_write_to_stream): Don't sync the
	GMimeDisposition object to the header here anymore. We want to try
	and keep the original raw header if this is a parsed message.

2004-06-03  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-part.c (sync_content_disposition): Moved. Also
	protect against a NULL disposition.
	(mime_part_write_to_stream): Sync the Content-Disposition header
	before writing to the stream.

	* gmime/gmime-utils.c (header_fold): Fixed a folding bug where we
	could get a blank line (well, wasn't really blank - but we would
	get a "\n\t\n" sequence which isn't really useful nor desirable).

	* gmime/gen-table.c: Added a new bit and corresponding macro.

	* gmime/gmime-table-private.h: Updated.
